--- a/second/blog/templates/home.html
+++ b/second/blog/templates/home.html
@@ -1,14 +1,64 @@
-{% for blog in blogs.all%}
-    <h1>제목: {{blog.title}}</h1>
-    <p>날짜: {{blog.pub_date}}</p>
-    <p>본문 미리보기: {{blog.summary}} <a href="{%url 'detail' blog.id%}">...more</a></p>
-    <br><br>
-{%endfor%}
-
-<!--
-    쿼리셋과 메소드의 형식
-    모델.쿼리셋(objects).메소드
-
-    즉, 'blogs.all' = 'Blog.objects.all' 
-    * all은 해당 쿼리셋의 데이터를 모두 지칭하는 메소드
-!-->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="{%url 'home'%}">프로그래밍 잡동사니</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{%url 'home'%}">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{%url 'new'%}">글쓰기</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+        </nav>
+        <br>
+        {% for blog in blogs.all%}
+        <div class="card" style="width: 60rem; margin-left: 2rem;">
+            <div class="card-body">
+                <h3 class="card-title">{{blog.title}}</h3>
+                <p>날짜: {{blog.pub_date}}</p>
+                <p class="card-text">{{blog.summary}}</p>
+                <a href="{%url 'detail' blog.id%}">...more</a>
+                <br>
+            </div>
+        </div>
+        <br>
+        {%endfor%}
+    </div>
+</body>
+</html>
