--- a/second/blog/templates/new.html
+++ b/second/blog/templates/new.html
@@ -1,62 +1,21 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</head>
+{% extends 'base.html' %}
+
+{% block contents %}
 <body>
-    <div>
-        <nav class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="{%url 'home'%}">프로그래밍 잡동사니</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{%url 'portfolio'%}">Portfolio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{%url 'new'%}">글쓰기</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-        </nav>
-        <div style="margin: 2rem;">
-            <form action="{%url 'create'%}">
-                <h3>제목:</h3>
-                <input type="text" name="title">
-                <br><br>
-                <h3>본문:</h3>
-                <textarea cols="40" rows="10" name="body"></textarea>
-                <br><br>
-                <input class="btn btn-dark" type="submit" value="제출하기">
-            </form>
-        </div>
-    </div>
+  <div>
+    <!--안겹치는 부분-->
+    <div style="margin: 2rem;">
+      <form action="{%url 'create'%}">
+          <h3>제목:</h3>
+          <input type="text" name="title">
+          <br><br>
+          <h3>본문:</h3>
+          <textarea cols="40" rows="10" name="body"></textarea>
+          <br><br>
+          <input class="btn btn-dark" type="submit" value="제출하기">
+      </form>
+   </div>
+   <!--안겹치는 부분-->
+  </div>
 </body>
-</html>
+{% endblock %}
