--- a/second/secondproject/templates/base.html
+++ b/second/secondproject/templates/base.html
@@ -29,14 +29,14 @@
                       Dropdown
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="{%url 'login'%}">로그인</a></li>
+                      <li><a class="dropdown-item" href="{%url 'logout'%}">로그아웃</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="{%url 'signup'%}">회원가입</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                   </li>
                 </ul>
                 <form class="d-flex">
