--- a/second/blog/templates/home.html
+++ b/second/blog/templates/home.html
@@ -5,7 +5,7 @@
   <div>
     <!--안겹치는 부분-->
     <br>
-    {% for blog in blogs.all%}
+    {% for blog in posts %}
     <div class="card" style="width: 60rem; margin-left: 2rem;">
         <div class="card-body">
             <h3 class="card-title">{{blog.title}}</h3>
@@ -18,6 +18,22 @@
     <br>
     {%endfor%}
     <!--안겹치는 부분-->
+  </div>
+  <div class="container">
+    <!--First Previous-->
+    {%if posts.has_previous%}
+    <a href="?page=1">First</a>
+    <a href="?page={{posts.previous_page_number}}">Previous</a>
+    {%endif%}
+    <!--3of4 -->
+    <span>{{posts.number}}</span>
+    <span>of</span>
+    <span>{{posts.paginator.num_pages}}</span>
+    <!--Next Last-->
+    {%if posts.has_next%}
+    <a href="?page={{posts.next_page_number}}">Next</a>
+    <a href="?page={{posts.paginator.num_pages}}">Last</a>
+    {%endif%}   
   </div>
 </body>
 {% endblock %}
