--- a/second/blog/templates/new.html
+++ b/second/blog/templates/new.html
@@ -1,21 +1,16 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-<body>
-  <div>
-    <!--안겹치는 부분-->
-    <div style="margin: 2rem;">
-      <form action="{%url 'create'%}">
-          <h3>제목:</h3>
-          <input type="text" name="title">
-          <br><br>
-          <h3>본문:</h3>
-          <textarea cols="40" rows="10" name="body"></textarea>
-          <br><br>
-          <input class="btn btn-dark" type="submit" value="제출하기">
-      </form>
-   </div>
-   <!--안겹치는 부분-->
-  </div>
-</body>
+<br>
+
+<div class="container">
+  <form method="POST">
+    {% csrf_token %}
+    <table>
+      {{form.as_table}}
+    </table>
+    <br>
+      <input class="btn btn-dark" type="submit" value="제출하기">
+  </form>
+</div>
 {% endblock %}
